Fix the navbar icons in the mobile view alignments are left aligned problem

--- a/assets/css/custom_css.css
+++ b/assets/css/custom_css.css
@@ -57,10 +57,13 @@
   
   .search-icon {
     display: none;
+    margin-right: 4.0rem;
   }
   
   .phone-icon {
     display: none;
+    margin-right: 4.2rem;
+    margin-left: 2.0rem;
   }
   
   .mobile-view{
